# TODO: https://github.com/cogciprocate/qutex/pull/5
[patch.crates-io.qutex]
git = "https://github.com/azastrael/qutex"
branch = "0.2.4-async_await"

[workspace]
members = [
  "bastion",
  "bastion-executor",
  "lightproc"
]

[profile.bench]
panic = "unwind"
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
