[package]
name = "bastion-executor"
# Steps to release to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
#   - npm install -g auto-changelog && auto-changelog at the root
# - Create "v0.x.y" git tag at the root of the project.
version = "0.3.4"
description = "Cache affine NUMA-aware executor for Rust"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
keywords = ["fault-tolerant", "runtime", "actor", "system"]
categories = ["concurrency", "asynchronous"]
homepage = "https://github.com/bastion-rs/bastion"
repository = "https://github.com/bastion-rs/bastion"
documentation = "https://docs.rs/bastion"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"
exclude = [
	"scripts/*",
]

[badges]
travis-ci = { repository = "bastion-rs/bastion", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
unstable = ["numanji", "allocator-suite", "jemallocator"]

[dependencies]
bastion-utils = { version = "0.3.2", path = "../bastion-utils" }
crossbeam-utils = "0.7"
crossbeam-channel = "0.4"
crossbeam-epoch = "0.8"
fxhash = "0.2"
lazy_static = "1.4"
libc = "0.2"
num_cpus = "1.10"
pin-utils = "0.1.0-alpha.4"
lightproc = { version = "= 0.3.4" }

# Allocator
numanji = { version = "^0.1", optional = true, default-features = false }
allocator-suite = { version = "^0.1", optional = true, default-features = false }

[target.'cfg(not(any(target_os = "android", target_os = "linux")))'.dependencies]
jemallocator = { version = "^0.3", optional = true, default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^0.3.8", features = ["basetsd"] }
kernel32-sys = "^0.2.2"

[dev-dependencies]
proptest = "^0.9"
futures = "0.3.1"
