[package]
name = "bastion"
version = "0.3.2-alpha.0"
description = "Fault-tolerant Runtime for Rust applications"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
keywords = ["fault-tolerant", "runtime", "actor", "system"]
categories = ["concurrency", "asynchronous"]
homepage = "https://github.com/bastion-rs/bastion"
repository = "https://github.com/bastion-rs/bastion"
documentation = "https://docs.rs/bastion"
readme = "../README.md"
license = "Apache-2.0/MIT"
edition = "2018"
exclude = [
	".github/*",
	"examples/*",
	"graphstore/*",
	"tests/*",
	"img/*",
	"ci/*",
	"benches/*",
	"doc/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md"
]

[badges]
travis-ci = { repository = "bastion-rs/bastion", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
unstable = ["bastion-executor/unstable"]

[dependencies]
bastion-executor = { version = "= 0.3.1", path = "../bastion-executor" }
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
fxhash = "0.2"
lazy_static = "1.4"
lightproc = { version = "= 0.3.3", path = "../lightproc" }
log = "0.4"
# TODO: https://github.com/cogciprocate/qutex/pull/5
# TODO: https://github.com/cogciprocate/qutex/pull/6
bastion-qutex = { version = "0.2", features = ["async_await"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
env_logger = "0.7"
proptest = "0.9"
snap = "0.2"
