[package]
name = "lightproc"
version = "0.2.1-alpha.0"
description = "Lightweight process abstraction for Rust"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
keywords = ["fault-tolerant", "runtime", "actor", "system", "lightweight-process"]
categories = ["concurrency", "asynchronous"]
edition = "2018"

[dependencies]
crossbeam-utils = "0.6.6"
pin-utils = "0.1.0-alpha.4"

[dev-dependencies]
crossbeam = "0.7.1"
futures-preview = "0.3.0-alpha.17"
lazy_static = "1.3.0"
