[package]
name = "bastion-executor"
# Steps to release to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
#   - npm install -g auto-changelog && auto-changelog at the root
# - Create "v0.x.y" git tag at the root of the project.
version = "0.3.5-alpha"
description = "Cache affine NUMA-aware executor for Rust"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
keywords = ["fault-tolerant", "runtime", "actor", "system"]
categories = ["concurrency", "asynchronous"]
homepage = "https://github.com/bastion-rs/bastion"
repository = "https://github.com/bastion-rs/bastion"
documentation = "https://docs.rs/bastion"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"
exclude = [
	"scripts/*",
]

[badges]
travis-ci = { repository = "bastion-rs/bastion", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
unstable = ["numanji", "allocator-suite", "jemallocator"]

[dependencies]
lightproc = { version = "= 0.3.5-alpha.0", path = "../lightproc" }
bastion-utils = { version = "0.3.2", path = "../bastion-utils" }

crossbeam-utils = "0.7.2"
crossbeam-channel = "0.4.2"
crossbeam-epoch = "0.8.2"
lazy_static = "1.4.0"
libc = "0.2.71"
num_cpus = "1.13.0"
pin-utils = "0.1.0"

# Allocator
numanji = { version = "0.1.2", optional = true, default-features = false }
allocator-suite = { version = "0.1.4", optional = true, default-features = false }

[target.'cfg(not(any(target_os = "android", target_os = "linux")))'.dependencies]
jemallocator = { version = "0.3.2", optional = true, default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["basetsd"] }
kernel32-sys = "0.2.2"

[dev-dependencies]
proptest = "0.10.0"
futures = "0.3.5"
