[package]
name = "bastion"
# Steps to release to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
#   - npm install -g auto-changelog && auto-changelog at the root
# - Create "v0.x.y" git tag at the root of the project.
version = "0.4.5-alpha.0"
description = "Fault-tolerant Runtime for Rust applications"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
keywords = ["fault-tolerant", "runtime", "actor", "system"]
categories = ["concurrency", "asynchronous"]
homepage = "https://github.com/bastion-rs/bastion"
repository = "https://github.com/bastion-rs/bastion"
documentation = "https://docs.rs/bastion"
readme = "../../README.md"
license = "Apache-2.0/MIT"
edition = "2018"
exclude = [
	".github/*",
	"examples/*",
	"graphstore/*",
	"tests/*",
	"img/*",
	"ci/*",
	"benches/*",
	"doc/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md"
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
unstable = ["bastion-executor/unstable"]
distributed = [
  "artillery-core"
]
scaling = []
docs = ["distributed", "scaling", "default"]
tokio-runtime = ["bastion-executor/tokio-runtime"]

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[dependencies]
bastion-executor = { git = "https://github.com/bastion-rs/bastion.git" }
# bastion-executor = { path = "../bastion-executor" }
lightproc =  { git = "https://github.com/bastion-rs/bastion.git" }
# lightproc = "0.3"
# lightproc = { path = "../lightproc" }

lever = "0.1"
futures = "0.3.5"
futures-timer = "3.0.2"
fxhash = "0.2"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pin-utils = "0.1"

async-mutex = "1.4.0"
uuid = { version = "0.8", features = ["v4"] }

# Distributed
artillery-core = { version = "0.1.2-alpha.3", optional = true }

# Log crates
tracing-subscriber = "0.2.6"
tracing = "0.1.15"
anyhow = "1.0"
crossbeam-queue = "0.3.0"
log = "0.4.14"
lasso = {version = "0.5", features = ["multi-threaded"] }
once_cell = "1.7.2"
thiserror = "1.0.24"
async-channel = "1.6.1"
regex = "1.4.5"

[target.'cfg(not(windows))'.dependencies]
nuclei = "0.1"

[dev-dependencies]
env_logger = "0.8"
proptest = "1.0"
snap = "1.0"
# prime_numbers example
bastion-utils = { version = "0.3.2", path = "../bastion-utils" }
rand = "0.8"
rayon = "1.3.1"
num_cpus = "1.13.0"
# hello_tokio example
tokio = { version="1.1", features = ["time", "macros"] }
# bastion-executor = { path = "../bastion-executor" }
bastion-executor = { git = "https://github.com/bastion-rs/bastion.git" }
once_cell = "1.5.2"
tokio-test = "0.4.0"
