[package]
name = "bastion"
# Steps to release to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
#   - npm install -g auto-changelog && auto-changelog at the root
# - Create "v0.x.y" git tag at the root of the project.
version = "0.4.3-alpha.0"
description = "Fault-tolerant Runtime for Rust applications"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
keywords = ["fault-tolerant", "runtime", "actor", "system"]
categories = ["concurrency", "asynchronous"]
homepage = "https://github.com/bastion-rs/bastion"
repository = "https://github.com/bastion-rs/bastion"
documentation = "https://docs.rs/bastion"
readme = "../../README.md"
license = "Apache-2.0/MIT"
edition = "2018"
exclude = [
	".github/*",
	"examples/*",
	"graphstore/*",
	"tests/*",
	"img/*",
	"ci/*",
	"benches/*",
	"doc/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md"
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
unstable = ["bastion-executor/unstable"]
docs = ["default"]

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[dependencies]
async-channel = "1.6.1"
async-trait = "0.1.50"
async-mutex = "1.4.0"
bastion-executor = "0.4.1"
crossbeam = "0.8.1"
thiserror = "1.0.25"
once_cell = "1.8.0"
lever = "0.1.1"
lightproc = "0.3.5"
regex = "1.5.4"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
