[package]
name = "bastion"
# Steps to release to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
#   - npm install -g auto-changelog && auto-changelog at the root
# - Create "v0.x.y" git tag at the root of the project.
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
categories = ["concurrency", "asynchronous"]
description = "Fault-tolerant Runtime for Rust applications"
documentation = "https://docs.rs/bastion"
edition = "2018"
exclude = [
  ".github/*",
  "examples/*",
  "graphstore/*",
  "tests/*",
  "img/*",
  "ci/*",
  "benches/*",
  "doc/*",
  "*.png",
  "*.dot",
  "*.yml",
  "*.toml",
  "*.md",
]
homepage = "https://github.com/bastion-rs/bastion"
keywords = ["fault-tolerant", "runtime", "actor", "system"]
license = "Apache-2.0/MIT"
readme = "../../README.md"
repository = "https://github.com/bastion-rs/bastion"
version = "0.4.5-alpha.0"

[badges]
maintenance = {status = "actively-developed"}

[features]
default = []
distributed = [
  "artillery-core",
]
docs = ["distributed", "scaling", "default"]
scaling = []
tokio-runtime = ["bastion-executor/tokio-runtime"]
unstable = ["bastion-executor/unstable"]

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[dependencies]
bastion-executor = {git = "https://github.com/bastion-rs/bastion.git"}
# bastion-executor = { path = "../bastion-executor" }
lightproc = {git = "https://github.com/bastion-rs/bastion.git"}
# lightproc = "0.3"
# lightproc = { path = "../lightproc" }

futures = "0.3.5"
futures-timer = "3.0.2"
fxhash = "0.2"
lazy_static = "1.4"
lever = "0.1"
pin-utils = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

async-mutex = "1.1"
uuid = {version = "0.8", features = ["v4"]}

# Distributed
artillery-core = {version = "0.1.2-alpha.3", optional = true}

# Log crates
anyhow = "1.0"
crossbeam-queue = "0.3.0"
lasso = {version = "0.5", features = ["multi-threaded"]}
log = "0.4.14"
once_cell = "1.7.2"
thiserror = "1.0.24"
tracing = "0.1.15"
tracing-subscriber = "0.2.6"

[target.'cfg(not(windows))'.dependencies]
nuclei = "0.1"

[dev-dependencies]
env_logger = "0.8"
proptest = "1.0"
snap = "1.0"
# prime_numbers example
bastion-utils = {version = "0.3.2", path = "../bastion-utils"}
num_cpus = "1.13.0"
rand = "0.8"
rayon = "1.3.1"
# hello_tokio example
tokio = {version = "1.1", features = ["time", "macros"]}
# bastion-executor = { path = "../bastion-executor" }
bastion-executor = {git = "https://github.com/bastion-rs/bastion.git"}
once_cell = "1.8"
tokio-test = "0.4.0"
